# MathNote

./: .gitignore  MANIFEST.in  README.md  TODO.md  c.txt  cli.py  config.json  config.py  config_template.json  controller.py  global_utils.py  main.py  main_cli.py  main_gui.py  mathnote.sh  optional_requirements.txt  requirements.txt  setup.cfg
config/: doc.aux  doc.fdb_latexmk  doc.fls  doc.tex  pdflatex40069.fls  t.pdf_tex
course/: cli.py  controller.py  course_controller.py  courses.py  lectures.py  lectures_obj.py  parse_tex.py  utils.py
course/tests/: test_courses.py  test_lectures.py
courses/: cli.py  course_controller.py  courses.py  lectures.py  main.py
flash_cards/: app.py
flash_cards/templates/: index.html
flashcard/: controller.py  flashcard_controller.py  flashcard_model.py  utils.py  window.py
gui/: '  _old_trackedstring.py  controller.py  fix  flashcard_model.py  gui.log.1  gui.log.2  main_gui.py  test.py  test.tex  window.py
mathnotelib/: MANIFEST.in  _enums.py  cli.py  cmd.py  config.py  controller.py  exceptions.py  logging_config.json  parse.py  parse_tex.py  utils.py
mathnotelib/course/: __init__.py  courses.py  parse_tex.py
mathnotelib/flashcard/: __init__.py  edit_tex.py  flashcard_controller.py  flashcard_model.py  window.py
mathnotelib/models/: __init__.py  courses.py  flashcard.py  note.py  source_file.py
shortcut_manager/: config.py  figures.py  hotkey.py  initializer.py  latex_utils.py  macos_specific.py  open_term.py  pynput.md  shortcut_manager.py  test.py  user_shortcuts.py  utils.py  vim.py
tests/: courses.py
(+51 files in other folders)
