[metadata]
name = mathnote
version = 1.0.0
long_description = file: README.md
author = Joshua Taylor
author_email = joshua12.taylor12@gmail.com
license = MIT
url = https://github.com/Josh-T1/MathNote

[options]
packages = find:
include_package_data = true
install_requires = 
    PyQt6

[options.entry_points]
console_scripts = 
    mathnote = mathnotelib.cli:main
